defini as cores, fontes e botões

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,12 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$blue: #1369CB;
+$light-blue: #2782EB;
+$lightest-blue: #7EB9FC;
+$very-light-blue: #AFEBFF;
+$white: #FFFFFF;
+$light-gray: #ECEBEB;
+$dark-gray: #66757F;
+$black: #020202;
