--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,10 +4,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
 
 // Define fonts for body and headers
 
-$headers-font: 'Montserrat', sans-serif; // para títulos
+$headers-font: 'Fredoka One', sans-serif; // para títulos
+$body-font: 'Fredoka', sans-serif; // para subtítulos
 $subtitle-font: 'Poppins', sans-serif; // para subtítulos
 $body-font: 'Roboto', sans-serif; // corpo de texto
 
