--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -2,6 +2,10 @@
 
 <%= form_with model: @profile, local: true do |f| %>
   <div>
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name %>
+  </div>
+  <div>
     <%= f.label :bio %>
     <%= f.text_area :bio %>
   </div>
