--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,7 +1,19 @@
-<h1>MEUS CONTATOS</h1>
+<h1 class="title">Profiles</h1>
 
-<ul>
-  <% @profiles.each do |profile| %>
-    <li><%= link_to profile.name, profile_path(profile) %></li>
-  <% end %>
-</ul>
+<section class="profiles-list">
+  <ul>
+    <% @profiles.each do |profile| %>
+      <li>
+        <article class="profile-card">
+          <% if profile.photo.attached? %>
+            <img src="<%= profile.photo.url %>" alt="Photo of <%= profile.name %>" class="profile-photo">
+          <% end %>
+          <h2><%= profile.name %></h2>
+          <p><strong>Location:</strong> <%= profile.city %>, <%= profile.country %></p>
+          <p><strong>Language:</strong> <%= profile.language %></p>
+          <%= link_to "View Profile", profile_path(profile), class: "btn btn-principal" %>
+        </article>
+      </li>
+    <% end %>
+  </ul>
+</section>
