mudei para simple form

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,14 +1,14 @@
 .btn-principal {
   background-color: #1369CB;
   color: white;
-  padding: 5px 10px;  // Menor padding para diminuir a altura
+  padding: 5px 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  width: 150px;  // Largura fixa para o botão (ajuste conforme necessário)
+  width: 150px;
   color: white;
-  margin: 10px auto;  // Espaço ao redor para centralizar
+  margin: 10px auto;
   display: inline-block;
   font-size: 12px;
 
