--- a/app/assets/stylesheets/components/_profiles.scss
+++ b/app/assets/stylesheets/components/_profiles.scss
@@ -1,5 +1,5 @@
 .title {
-  color: #007782;
+  color: #1369CB;
   text-align: center;
 }
 
@@ -21,7 +21,7 @@
   margin-bottom: 15px;
 }
 
-.profile-btn { 
+.profile-btn {
   background: #007782;
   color: white;
   padding: 10px 15px;
