--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,13 +1,11 @@
 // Define variables for your color scheme
 
-// For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+// $red: #FD1015;
+// $blue: #0D6EFD;
+// $yellow: #FFC65A;
+// $orange: #E67E22;
+// $green: #1EDD88;
+// $light-gray: #F4F4F4;
 
 $blue: #1369CB;
 $light-blue: #2782EB;
@@ -15,5 +13,7 @@ $lightest-blue: #7EB9FC;
 $very-light-blue: #AFEBFF;
 $white: #FFFFFF;
 $light-gray: #ECEBEB;
-$dark-gray: #66757F;
+$gray: #808080;
+$medium-gray: #66757F;
+$dark-gray: #0E0000;
 $black: #020202;
