--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -4,6 +4,7 @@
 // 2. These variables are defined with default value (see https://robots.thoughtbot.com/sass-default)
 // 3. You can override them below!
 
+
 // General style
 $font-family-sans-serif: $body-font;
 $headings-font-family:   $headers-font;
@@ -11,12 +12,13 @@ $body-bg:                $light-gray;
 $font-size-base:         1rem;
 
 // Colors
-$body-color: $gray;
-$primary:    $blue;
-$success:    $green;
-$info:       $yellow;
-$danger:     $red;
-$warning:    $orange;
+// $body-color: $gray;
+// $primary:    $blue;
+$blue: #1369CB;
+$success: $blue;
+// $info:       $yellow;
+// $danger:     $red;
+// $warning:    $orange;
 
 // Buttons & inputs' radius
 $border-radius-sm:            .0625rem;
