--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="title">Profiles</h1>
 
-<section class="profiles-list">
+<section class="profiles-listing">
   <ul>
     <% @profiles.each do |profile| %>
       <li>
