--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -10,7 +10,7 @@
         <%= f.input :bio, label: "Bio", as: :text, input_html: { class: 'custom-text-field' } %>
       </div>
     <div class="form-input">
-       <%= f.input :country, label: "Country", collection: ['Brazil', 'USA', 'France', 'Germany'], input_html: { class: 'custom-text-field' } %>
+       <%= f.input :country, label: "Country", collection: ['Brazil', 'Portugal', 'France', 'Italy'], input_html: { class: 'custom-text-field' } %>
     </div>
       <div class="form-input">
         <%= f.input :city, label: "City", input_html: { class: 'custom-text-field' } %>
