--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -17,4 +17,7 @@
   <p><strong>Language:</strong> <%= @profile.language %></p>
 
   <%= link_to 'Back to Profiles', profiles_path, class: "profile-btn" %>
+  <% if current_user.profile == @profile %>
+  <%= link_to "Editar Perfil", edit_profile_path(@profile), class: "btn btn-primary" %>
+<% end %>
 </section>
