--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -11,7 +11,7 @@
           <h2><%= profile.name %></h2>
           <p><strong>Location:</strong> <%= profile.city %>, <%= profile.country %></p>
           <p><strong>Language:</strong> <%= profile.language %></p>
-          <%= link_to "View Profile", profile_path(profile), class: "btn btn-quarto" %>
+          <%= link_to "View Profile", profile_path(profile, query: params[:query]), class: "btn btn-quarto" %>
         </article>
       </li>
     <% end %>
