--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -16,7 +16,7 @@
   <p><strong>Availability:</strong> <%= @profile.availability ? 'Available' : 'Not Available' %></p>
   <p><strong>Language:</strong> <%= @profile.language %></p>
 
-  <%= link_to 'Back to Profiles', profiles_path, class: "profile-btn" %>
+  <%= link_to 'Back to Profiles', profiles_path(query: params[:query]), class: "profile-btn" %>
   <% if current_user.profile == @profile %>
   <%= link_to "Editar Perfil", edit_profile_path(@profile), class: "btn btn-primary" %>
 <% end %>
