--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -37,12 +37,12 @@
         <%= f.input :photo, label: "Imagem de Perfil", as: :file %>
       </div>
       <div>
-        <%= f.button :submit, "Create Profile", class: "btn-principal" %>
+        <%= f.button :submit, "Create Profile", class: "btn-quarto" %>
       </div>
     <% end %>
   </div>
 </div>
 
 <footer class="footer">
-  <p>&copy; 2025 Local Buddy. Todos os direitos reservados.</p>
+  <p>&copy; 2025 Local Buddy. All rights reserved.</p>
 </footer>
