--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -20,7 +20,7 @@
 .btn-segundo {
   background-color: #2782EB;
   color: #AFEBFF;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border: 2px solid #1369CB;
   border-radius: 5px;
   cursor: pointer;
@@ -35,7 +35,7 @@
 .btn-terceiro {
   background-color: #FFFFFF;
   color: #333;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border: 2px solid #ECEBEB;
   border-radius: 5px;
   cursor: pointer;
@@ -51,7 +51,7 @@
 .btn-quarto {
   background-color: #7EB9FC;
   color: white;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border: 2px solid #1369CB;
   border-radius: 25px;
   cursor: pointer;
@@ -63,4 +63,64 @@
     border-color: #1369CB;
     box-shadow: #66757F;
   }
+}
+
+.btn-primario, .btn-secundario {
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  font-size: 14px;
+  margin: 10px 5px;
+  display: inline-block;
+}
+
+.btn-primario {
+  background-color: $dark-blue;
+  color: white;
+  border: 2px solid transparent;
+}
+
+.btn-secundario {
+  background-color: $light-blue;
+  color: white;
+  border: 2px solid $blue;
+}
+
+.btn-primario:hover, .btn-secundario:hover {
+  transform: scale(1.05);
+}
+
+.btn-primario:hover {
+  background-color: #7EB9FC;
+}
+
+.btn-secundario:hover {
+  background-color: #66757F;
+  color: white;
+}
+
+
+
+.btn-neutro {
+  background-color: $white;
+  color: $dark-blue;
+  padding: 8px 15px;
+  border: 2px solid #ECEBEB;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover {
+    background-color: #ECEBEB;
+    border-color: #ECEBEB;
+    color: #020202;
+  }
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px; 
 }
