--- a/app/assets/stylesheets/components/_profiles.scss
+++ b/app/assets/stylesheets/components/_profiles.scss
@@ -1,5 +1,16 @@
 .title {
-  color: #66757F;
+  color: #003878;
+  text-align: center;
+  font-size: 36px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 700 !important;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+h1, h2, p {
+  color: #003878;
+  font-weight: bold;
   text-align: center;
 }
 
@@ -47,8 +58,40 @@
 .profile-listing ul {
   display: block;
 }
+
 .profile-listing li {
   width: 100%;
   max-width: 500px;
   margin: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .profile-details {
+    width: 95%;
+    padding: 15px;
+    max-width: 100%;
+  }
+
+  .profiles-list ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .profile-photo {
+    width: 120px;
+    height: 120px;
+  }
+
+  .profile-btn {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  h1, h2 {
+    font-size: 28px;
+  }
+
+  p {
+    font-size: 14px;
+  }
 }
