--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,6 +7,7 @@
 // $green: #1EDD88;
 // $light-gray: #F4F4F4;
 
+$dark-blue: #003878;
 $blue: #1369CB;
 $light-blue: #2782EB;
 $lightest-blue: #7EB9FC;
