--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,7 +30,7 @@
         <div class="card shadow-sm">
           <div class="card-body">
             <h5 class="card-title"><%= city %></h5>
-            <a href="#" class="btn btn-explore">Explore</a>
+            <%= link_to 'Explore', '#', class: 'btn btn-explore' %>
           </div>
         </div>
       </div>
