--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,19 +1,20 @@
 <%= turbo_stream_from "match_#{@match.id}_messages" %>
 
 <div id="messages" class="messages">
-<%= turbo_frame_tag :messages, class: 'messages' do %>
-  <% @match.messages.each do |message| %>
-    <%= render "messages/message", message: message, user: current_user %>
+  <%= turbo_frame_tag :messages, class: 'messages' do %>
+    <% @match.messages.each do |message| %>
+      <%= render "messages/message", message: message, user: current_user %>
+    <% end %>
   <% end %>
-<% end %>
 </div>
 
 <%= simple_form_for [@match, Message.new], html: {class: "d-flex", data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }} do |f| %>
   <% other_user = current_user == @match.user ? @match.user : @match.user %>
-  <%= f.input :content,
-    label: false,
-    placeholder: "Mensagem para #{other_user.name}",
-    wrapper_html: {class: "flex-grow-1"}
-  %>
-  <%= f.submit "Enviar", class: "btn btn-primary mb-3" %>
+  <div id="new_message" class="form-group">
+    <%= f.input :content,
+      label: false,
+      placeholder: "Write your message #{other_user.name}",
+      wrapper_html: {class: "flex-grow-1 input-chat"} %>
+    <%= f.submit "Send", class: "btn-chat btn btn-primary mb-3" %>
+  </div>
 <% end %>
