--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -16,7 +16,7 @@
   <p><strong>Availability:</strong> <%= @profile.availability ? 'Available' : 'Not Available' %></p>
   <p><strong>Language:</strong> <%= @profile.language %></p>
 
-  <%= link_to 'Send a Message', matches_path, class: 'btn btn-primary', data: { turbo_method: :post } %>
+  <%= link_to 'Match', matches_path(@match), class: 'btn btn-primary', data: { turbo_method: :post } %>
 
   <%= link_to 'Back to Profiles', profiles_path, class: "profile-btn" %>
   <% if current_user.profile == @profile %>
