criando os matches

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -5,6 +5,7 @@
     <% @match.messages.each do |message| %>
       <%= render "messages/message", message: message, user: current_user %>
     <% end %>
+raise
   <% end %>
 </div>
 
