--- a/app/assets/stylesheets/components/_profiles.scss
+++ b/app/assets/stylesheets/components/_profiles.scss
@@ -1,19 +1,3 @@
-.title {
-  color: #003878;
-  text-align: center;
-  font-size: 36px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 700 !important;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-  margin-top: 20px;
-}
-
-h1, h2, p {
-  color: #003878;
-  font-weight: bold;
-  text-align: center;
-}
-
 .profile-details {
   background: #F4F4F4;
   padding: 20px;
@@ -25,6 +9,15 @@ h1, h2, p {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.profile-photo {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block;
+  margin: 0 auto 15px;
+}
+
 .profiles-list ul {
   display: flex;
   flex-wrap: wrap;
@@ -32,15 +25,6 @@ h1, h2, p {
   padding: 0;
   list-style: none;
 }
-
-.profile-photo {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 15px;
-}
-
 .profile-btn {
   background: #7EB9FC;
   color: white;
