--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,7 +29,7 @@
               <% if current_user.profile.present? %>
                <%= link_to "Meu Perfil", profile_path(current_user.profile), class: "dropdown-item" %>
               <% end %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
+              <%#= link_to "Another action", "#", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
