--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="buttons-container">
-    <%= link_to 'Back to Profiles', profiles_path, class: "profile-btn" %>
+    <%= link_to 'Back to Profiles', profiles_path(query: params[:query]), class: "profile-btn" %>
     <% if current_user.profile == @profile %>
       <%= link_to "Editar Perfil", edit_profile_path(@profile), class: "btn btn-primary" %>
     <% end %>
