arrumei a home e navbar

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -107,7 +107,8 @@
   width: 100%;
   text-align: center;
 }
-.title {
+
+.title-principal {
   color: #003878;
   text-align: center;
   font-size: 36px;
@@ -115,10 +116,4 @@
   font-weight: 700 !important;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
   margin-top: 20px;
-}
-
-h1, h2, p {
-  color: #003878;
-  font-weight: bold;
-  text-align: center;
 }
