--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,6 +12,7 @@ $blue: #1369CB;
 $light-blue: #2782EB;
 $lightest-blue: #7EB9FC;
 $very-light-blue: #AFEBFF;
+$very-very-light-blue: #cdf2ff;
 $white: #FFFFFF;
 $light-gray: #ECEBEB;
 $gray: #808080;
