--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,54 +1,125 @@
-// Specific CSS for your home-page
-.baner {
+.banner {
   padding: 50px 15px;
+  background-color: #f4f4f4;
   border-radius: 10px;
+  text-align: center;
+
+  .titulo-home {
+    color: #1369CB;
+    font-size: 2rem;
+    font-weight: bold;
+    font-size: 40px;
+  }
+
+  .titulo-home-2 {
+    color: #003878;
+    font-size: 2rem;
+    font-weight: bold;
+    font-size: 40px;
+  }
+
+  .titulo-home-3 {
+    color: #1369CB;
+    font-size: 2rem;
+    font-weight: bold;
+    font-size: 18px;
+  }
+
+  .search-box  {
+    max-width: 500px;
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
+    .btn-pesquisa {
+      background-color: #003878;
+      color: $white;
+      padding: 10px 15px;
+      font-weight: bold;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 14px;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: darken($light-blue, 10%);
+      }
+    }
+  }
 }
 
-.search-box {
-  max-width: 500px;
+.custom-section-titulo {
+  background: linear-gradient(180deg, #2782EB 0%, #AFEBFF 100%);
+  padding: 50px 0;
+  color: #003878;
 }
 
-.btn-pesquisa {
-  font-weight: bold;
-  background-color: $light-blue;  // Cor do botão de pesquisa
-  color: $white;  // Texto branco no botão
-}
-
-.titulo {
-  color: #1369CB;
-}
-
-h2 {
-  color: #1369CB;
-}
-
-p {
-  color: #66757F;
-}
-
-.card-body {
-  color: #66757F;
-}
-
-.card-title {
-  color: $lightest-blue;
-}
-
-.btn-explore{
-  background-color: #1369CB;
-  color: white;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  width: 150px;
-  color: white;
-  margin: 10px auto;
-  display: inline-block;
-  font-size: 12px;
+.card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
 
   &:hover {
-    background-color: #7EB9FC;
+    transform: translateY(-5px);
   }
+
+  .image-container {
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+  }
+
+  .card-img-top {
+    width: 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+
+  &:hover .card-img-top {
+    transform: scale(1.1);
+  }
+
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
+    padding: 20px;
+    color: #f4f4f4;
+    background-color: #f4f4f4;;
+  }
+
+  .card-title {
+    color: #003878;
+    font-size: 1.8rem;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .card-description {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #f4f4f4;
+  }
+
+  .btn-explore {
+    background-color: #003878;
+    color: white;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 100%;
+    align-self: stretch;
+    margin-top: auto; 
+
+    &:hover {
+      background-color: #7EB9FC;
+    }
+}
 }
