--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-custom">
   <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "Logo.local.buddy.jpg", alt: "Home",  width: "60", height: "60" %>
+      <%= image_tag "Logo.local.buddy.jpg", alt: "Home",  width: "80", height: "80" %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,34 +9,37 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+      <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
+            <%= link_to "Home", root_path, class: "nav-link home-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Messages", "#", class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <% if current_user.profile && current_user.profile.photo.attached? %>
-             <%= image_tag current_user.profile.photo, class: "avatar", alt: "dropdown menu", width: "40", height: "40" %>
-             <% end %>
-          </a>
+            <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <% if current_user.profile && current_user.profile.photo.attached? %>
+                <%= image_tag current_user.profile.photo, class: "avatar-image", alt: "dropdown menu" %>
+              <% else %>
+                <i class="fa-solid fa-circle-user icon"></i>
+              <% end %>
+            </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <% if current_user.profile.present? %>
-               <%= link_to "Meu Perfil", profile_path(current_user.profile), class: "dropdown-item" %>
+              <div class="navbar-nav-item-2">
+                <%= link_to "My Profile", profile_path(current_user.profile), class: "dropdown-item" %>
+                </div>
               <% end %>
-              <%#= link_to "Another action", "#", class: "dropdown-item" %>
+               <div class="navbar-nav-item-2">
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
+             </div>
         <% else %>
-          <li class="nav-item">
+          <div class="navbar-nav-item-2">
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
+           </div>
         <% end %>
-      </ul>
+        </ul>
     </div>
   </div>
 </div>
