--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,9 +14,17 @@
           <li class="nav-item active">
             <%= link_to "Home", root_path, class: "nav-link home-link" %>
           </li>
+          
           <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
+  <div id="navbar-messages">
+    <% if current_user.matches.any? || current_user.profile.matches.any? %>
+      <%= link_to "Messages", matches_path, class: "nav-link" %>
+    <% else %>
+      <span class="nav-link">No Messages</span>
+    <% end %>
+  </div>
+</li>
+
           <li class="nav-item dropdown">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <% if current_user.profile && current_user.profile.photo.attached? %>
