--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,14 +1,11 @@
 <h1>My Messages</h1>
 
 <% @matches.each do |match| %>
-  <div class="match">
-      <% if match.user == current_user %>
-        <%= match.profile.name %>
-      <% else %>
-        <% other_profile = Profile.find_by(user_id: match.user_id) %>
-        <%= other_profile.name if other_profile %>
-      <% end %>
-    </p>
+<% if match.user.profile.name == current_user.profile.name %>
+    <%= match.profile.profile.name %>
+
+<% else %>
+<%= match.user.profile.name %>
+<% end %>
     <%= link_to 'Chat', match_path(match), class: 'btn btn-primary' %>
-  </div>
 <% end %>
